feat: add event filters
